syntax = "proto3";

package select_;

option go_package = "bff-go-mvp/proto/select/gen;select_";

// Select request matching the beckn protocol structure
message SelectRequest {
  Context context = 1;
  Message message = 2;
}

// Context message for select request
// Contains both BAP (Buyer App) and BPP (Buyer Provider Platform) information
message Context {
  string version = 1;
  string action = 2;
  string domain = 3;
  string timestamp = 4;
  string message_id = 5;
  string transaction_id = 6;
  string bap_id = 7;
  string bap_uri = 8;
  string ttl = 9;
  string bpp_id = 10;
  string bpp_uri = 11;
}

// Message containing select parameters
message Message {
  string evse_id = 1;
  Vehicle vehicle = 2;
  string connector_id = 3;
  TimeWindow time_window = 4;
  Energy energy = 5;
  string offer_id = 6;
  Amount amount = 7;
}

// Vehicle information
message Vehicle {
  string make = 1;
  string model = 2;
  string type = 3;
}

// Time window for charging
message TimeWindow {
  string start = 1;
  string end = 2;
}

// Energy information
message Energy {
  double value = 1;
  string unit = 2;
}

// Amount information
message Amount {
  double value = 1;
  string currency = 2;
}

